; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/eth/extr_al_hal_eth_main.c_al_eth_pth_ext_update_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/eth/extr_al_hal_eth_main.c_al_eth_pth_ext_update_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_hal_eth_adapter = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.al_eth_pth_ext_update_params = type { i32, i32 }

@EC_PTH_INT_UPDATE_CTRL_UPDATE_METHOD_MASK = common dso_local global i32 0, align 4
@EC_PTH_INT_UPDATE_CTRL_UPDATE_METHOD_SHIFT = common dso_local global i32 0, align 4
@EC_PTH_EXT_UPDATE_CTRL_EXT_TRIG_EN_MASK = common dso_local global i32 0, align 4
@EC_PTH_EXT_UPDATE_CTRL_EXT_TRIG_EN_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @al_eth_pth_ext_update_config(%struct.al_hal_eth_adapter* %0, %struct.al_eth_pth_ext_update_params* %1) #0 {
  %3 = alloca %struct.al_hal_eth_adapter*, align 8
  %4 = alloca %struct.al_eth_pth_ext_update_params*, align 8
  %5 = alloca i32, align 4
  store %struct.al_hal_eth_adapter* %0, %struct.al_hal_eth_adapter** %3, align 8
  store %struct.al_eth_pth_ext_update_params* %1, %struct.al_eth_pth_ext_update_params** %4, align 8
  %6 = load %struct.al_hal_eth_adapter*, %struct.al_hal_eth_adapter** %3, align 8
  %7 = getelementptr inbounds %struct.al_hal_eth_adapter, %struct.al_hal_eth_adapter* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i32 @al_reg_read32(i32* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @EC_PTH_INT_UPDATE_CTRL_UPDATE_METHOD_MASK, align 4
  %14 = load i32, i32* @EC_PTH_INT_UPDATE_CTRL_UPDATE_METHOD_SHIFT, align 4
  %15 = load %struct.al_eth_pth_ext_update_params*, %struct.al_eth_pth_ext_update_params** %4, align 8
  %16 = getelementptr inbounds %struct.al_eth_pth_ext_update_params, %struct.al_eth_pth_ext_update_params* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @AL_REG_FIELD_SET(i32 %12, i32 %13, i32 %14, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @EC_PTH_EXT_UPDATE_CTRL_EXT_TRIG_EN_MASK, align 4
  %21 = load i32, i32* @EC_PTH_EXT_UPDATE_CTRL_EXT_TRIG_EN_SHIFT, align 4
  %22 = load %struct.al_eth_pth_ext_update_params*, %struct.al_eth_pth_ext_update_params** %4, align 8
  %23 = getelementptr inbounds %struct.al_eth_pth_ext_update_params, %struct.al_eth_pth_ext_update_params* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @AL_REG_FIELD_SET(i32 %19, i32 %20, i32 %21, i32 %24)
  %26 = load %struct.al_hal_eth_adapter*, %struct.al_hal_eth_adapter** %3, align 8
  %27 = getelementptr inbounds %struct.al_hal_eth_adapter, %struct.al_hal_eth_adapter* %26, i32 0, i32 0
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @al_reg_write32(i32* %30, i32 %31)
  ret i32 0
}

declare dso_local i32 @al_reg_read32(i32*) #1

declare dso_local i32 @AL_REG_FIELD_SET(i32, i32, i32, i32) #1

declare dso_local i32 @al_reg_write32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
